adjusting the layout & colors

--- a/style.css
+++ b/style.css
@@ -1,9 +1,5 @@
 .weather-app {
   padding: 20px;
-  background-color: #190061;
+  background-color: #0c0032;
   color: #3500d3;
-}
-
-body {
-  background-color: #190061;
 }
